# meli-challenge

./: .gitignore  Makefile  NOTES.md  README.md  TODO.md  docker-compose.yaml  run.md
backend/: Dockerfile  Makefile  pyproject.toml
backend/app/: config.py  main.py  schemas.py
backend/app/data/: products.json
backend/app/middleware/: log_filter.py
backend/app/routes/: health.py  products.py
backend/app/services/: product_service.py
backend/tests/: test_api.py
frontend/: Dockerfile  Makefile  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/product/[id]/: page.tsx
frontend/src/components/: Breadcrumb.tsx  BuyBox.tsx  ErrorMessage.tsx  Header.tsx  PaymentMethods.tsx  ProductCard.tsx  ProductDescription.tsx  ProductGallery.tsx  ProductGrid.tsx  ProductNotFound.tsx  ProductSpecs.tsx  ProductSummary.tsx  PurchaseBox.tsx  SellerModal.tsx
frontend/src/lib/: api.ts  config.ts
