[project]
name = "meli-challenge-backend"
version = "0.1.0"
description = "Backend to use MELI Challenge"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.12",
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "pytest>=8.4.0",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.13",
    "uvicorn>=0.34.3",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["-v"]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning", "ignore::UserWarning"]

